try fix width on mobile

--- a/styles.css
+++ b/styles.css
@@ -56,6 +56,7 @@ label:focus-within {
 
 input {
   display: block;
+  width: 100%;
   border-radius: .25rem;
   padding: .5rem;
   box-shadow: inset 0 0 .1rem #4c0e72;
